protobuf/protoeditor-core/testData/lang/annotation/EditionUnsupportedErrors.proto.testdata
<error descr="Edition 'unknown' is not yet supported">edition = "unknown";</error>
